# codenuances

./: README.md
c-cpp/: Base.cpp  Base.h  CMakeLists.txt  CpyVsAsgn.cpp  DebugPrinter.cpp  Derived.cpp  Final2008.cpp  Inheritance.cpp  InnerClass.cpp  MyChooseType.cpp  NOTES  NewDelete.cpp  OKnotOK.cpp  Promote.h  SmartDelete.cpp  TwoThreads.cpp  ValarrayPoly.h  Virtual.cpp  alignmentConstraint.cpp  arrayFieldCpyConstruct.cpp  arrayInit.cpp  arrays.cpp  auto.cpp  boostTransformIterator.cpp  cilk_test.cpp  cloneFunc.cpp  compileAndRun.sh  compileRun.sh  compositionWrapper.cpp  constCallSelection.cpp  constSyntax.cpp  constValueReturn.cpp  convOperator.cpp  convOperator2.cpp  dynarray.c  enumLearn.cpp  explicitTemplateInstantiation.cpp  explicitTemplateInstantiation.h  explicitTemplateInstantiationTest.cpp  factorial.cpp  (+42 more)
c-cpp/inheritingFromTemplatedClass/: Base.h  Derived.cpp  Derived.h  inheritingFromTemplatedClass.cpp
c-cpp/inheritingTemplated2/: Base.cpp  Base.h  Derived.cpp  inheritingFromTemplatedClass.cpp
c-cpp/mix-c-cpp/: cheader.h  main.cpp
c-cpp/mpi-boost/: conditionalBroadCast.cpp  gatherVectors.cpp  mpiutil.h  sendRcvPod.cpp
c-cpp/multi-typed-ptr/: multi-typed-ptr.cpp
java/: JavaStaticBinding.java  VirtualInConstructor.java
